--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "4.0.1",
     "react-toast": "^1.0.1",
     "react-toastify": "^6.2.0",
